# magnetia

./: LICENSE  README.md  pyproject.toml
magnetia/: calc.py  types.py
magnetia/physics/: __init__.py  field_lines.py
magnetia/ui/: __init__.py  efield.py
