[tool.poetry]
name = "magnetia"
version = "0.1.0"
description = ""
authors = [" Kristian Zarębski <krizar312@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
nptyping = "^2.3.1"
scipy = "^1.9.3"
bokeh = "^2.4.3"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"